----------------------------------------------------------------------
 OmegaT 4.1.3 update 3
----------------------------------------------------------------------
  2 Enhancements
  2 Bug fixes
  0 Localisation update
----------------------------------------------------------------------
4.1.3 update 3 vs 4.1.3 update 2

  Implemented requests:

  - Optionally disable bold style for active segment source
  https://sourceforge.net/p/omegat/feature-requests/952/

  - Replacement with regex capture groups and case manipulation
  https://sourceforge.net/p/omegat/feature-requests/953/

  Bug fixes:

  - OmegaT ignores valid TU after finding a TU missing source
  https://sourceforge.net/p/omegat/bugs/892/

  - Search result marking never ends, consuming CPU
  https://sourceforge.net/p/omegat/bugs/897/

----------------------------------------------------------------------
 OmegaT 4.1.3 update 2 (2018-01-16)
----------------------------------------------------------------------
  2 Enhancements
  2 Bug fixes
  6 Localisation updates
----------------------------------------------------------------------
4.1.3 update 2 vs 4.1.3 update 1

  Implemented requests:

  - Add an MT connector for Moses
  https://sourceforge.net/p/omegat/feature-requests/773/

  - Reduce unwanted glossary matches when "using terms appearing
separately"
  https://sourceforge.net/p/omegat/feature-requests/1362/

  Bug fixes:

  - Overlapping glossary marks result in index-out-of-bounds errors
  https://sourceforge.net/p/omegat/bugs/894/

  - Team tool `init` command does not set correct tokenizers
  https://sourceforge.net/p/omegat/bugs/895/

  Localisation Updates:

  - Brazilian Portuguese localisation updated to 4.1.3 update 2 (UI)
  - Dutch localisation updated to 4.1.3 update 2 (UI)
  - Interlingua localisation updated to 4.1.3 update 2 (UI)
  - Italian localisation updated to 4.1.3 update 2 (UI, scripts, readme)
  - Russian localisation updated to 4.1.3 update 2 (UI)