@@ -1361,6 +1361,8 @@ VISIO_FILTER_NAME=Visio
 
 WORDPRESS_FILTER_NAME=Wordpress
 
+SCRIBUS_FILTER_NAME=Scribus
+
 #XML Spreadsheet 2003 filter
 XML_SPREADSHEET_FILTER_NAME=XML Spreadsheet 2003
 
