@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 4.1.3 update 3
 ----------------------------------------------------------------------
-  2 Enhancements
+  3 Enhancements
   2 Bug fixes
   0 Localisation update
 ----------------------------------------------------------------------
@@ -14,6 +14,8 @@
 
   - Replacement with regex capture groups and case manipulation
   https://sourceforge.net/p/omegat/feature-requests/953/
+
+  - Scribus filter (*.sla)
 
   Bug fixes:
 
